# ColorCoding

./: Demo.ipynb  README.md  naive_method.ipynb  pyproject.toml  setup.cfg
src/colorCoding/: colorCoding.py
tests/: Demo.ipynb
