[metadata]
name = colorCoding
version = 0.0.1
author = did_you_leetcode_today
description = A package of color coding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c752334430/ColorCoding
project_urls =
    Bug Tracker = https://github.com/c752334430/ColorCoding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
